GearsetPOC/force-app/main/default/objects/Complaint__c/Complaint__c.object-meta.xml
<CustomObject>
    <label>Feedback</label>
    <nameField>
        <displayFormat>F-{000000}</displayFormat>
        <label>Feedback Reference</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Feedback</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>