GearsetPOC/force-app/main/default/objects/Complaint__c/fields/Complaint_Needs_to_be_Followed_Up__c.field-meta.xml
<CustomField>
    <fullName>Complaint_Needs_to_be_Followed_Up__c</fullName>
    <label>Complaint Needs to be Followed Up</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>