GearsetPOC/force-app/main/default/objects/Complaint__c/fields/Complaint_Originated_From__c.field-meta.xml
<CustomField>
    <fullName>Complaint_Originated_From__c</fullName>
    <label>Feedback Originated From</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Phone</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Web</fullName>
            </value>
            <value>
                <fullName>Social</fullName>
            </value>
            <value>
                <fullName>Live Chat</fullName>
            </value>
            <value>
                <fullName>Letter</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>