GearsetPOC/force-app/main/default/objects/Complaint__c/fields/Complaint_Summary_Text__c.field-meta.xml
<CustomField>
    <fullName>Complaint_Summary_Text__c</fullName>
    <label>Feedback Summary</label>
    <length>200</length>
    <type>Text</type>
</CustomField>