GearsetPOC/force-app/main/default/objects/Complaint__c/fields/Cost_Attached_to_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Cost_Attached_to_Feedback__c</fullName>
    <label>Cost Attached to Feedback?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>