GearsetPOC/force-app/main/default/objects/Complaint__c/fields/Customer_Account__c.field-meta.xml
<CustomField>
    <fullName>Customer_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Complaints</relationshipName>
    <type>Lookup</type>
</CustomField>