GearsetPOC/force-app/main/default/objects/Complaint__c/fields/ECC_Webhelp__c.field-meta.xml
<CustomField>
    <fullName>ECC_Webhelp__c</fullName>
    <label>Contact Centre Staff</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Staff_Complaint__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ECC Phone</fullName>
            </value>
            <value>
                <fullName>ECC Email</fullName>
            </value>
            <value>
                <fullName>Social</fullName>
            </value>
            <value>
                <fullName>Webhelp Derby - Phone</fullName>
            </value>
            <value>
                <fullName>Webhelp Derby - Email</fullName>
            </value>
            <value>
                <fullName>Webhelp Bucharest - Phone</fullName>
            </value>
            <value>
                <fullName>Webhelp Bucharest - Email</fullName>
            </value>
            <value>
                <fullName>Webhelp Bucharest - Live Chat</fullName>
            </value>
            <value>
                <fullName>CCC</fullName>
            </value>
            <value>
                <fullName>Ashford Email</fullName>
            </value>
            <value>
                <fullName>Ashford Phone</fullName>
            </value>
            <value>
                <fullName>Ashford Manager/Senior</fullName>
            </value>
            <value>
                <fullName>Brussels Email</fullName>
            </value>
            <value>
                <fullName>Brussels Phone</fullName>
            </value>
            <value>
                <fullName>Brussels Manager/Expert</fullName>
            </value>
            <value>
                <fullName>Live Chat</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>