GearsetPOC/force-app/main/default/objects/Complaint__c/fields/Feedback_Cost__c.field-meta.xml
<CustomField>
    <fullName>Feedback_Cost__c</fullName>
    <label>Feedback Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>