GearsetPOC/force-app/main/default/objects/Complaint__c/fields/Hotel_Complaint__c.field-meta.xml
<CustomField>
    <fullName>Hotel_Complaint__c</fullName>
    <description>Type of complaint</description>
    <inlineHelpText>Type of complaint regarding the booking process or Hotel stay</inlineHelpText>
    <label>Hotel Feedback</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type_of_Complaint__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Staff</fullName>
            </value>
            <value>
                <fullName>Booking Process</fullName>
            </value>
            <value>
                <fullName>Cleanliness</fullName>
            </value>
            <value>
                <fullName>General</fullName>
            </value>
            <value>
                <fullName>Room Type</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>