GearsetPOC/force-app/main/default/objects/Complaint__c/fields/Hotel_Reference__c.field-meta.xml
<CustomField>
    <fullName>Hotel_Reference__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to Hotel Object to link Hotel name &amp; reference to feedback &amp; costs on the back of complaints</description>
    <inlineHelpText>Enter Hotel Reference if Complaint/Praise is about a Package or Standalone Hotel booking</inlineHelpText>
    <label>Hotel Reference</label>
    <referenceTo>Hotel__c</referenceTo>
    <relationshipLabel>Feedback</relationshipLabel>
    <relationshipName>Feedback</relationshipName>
    <type>Lookup</type>
</CustomField>