GearsetPOC/force-app/main/default/objects/Complaint__c/fields/Inntel_Complaint__c.field-meta.xml
<CustomField>
    <fullName>Inntel_Complaint__c</fullName>
    <description>Type of Complaint</description>
    <inlineHelpText>Type of complaint regarding the Inntel</inlineHelpText>
    <label>Inntel Feedback</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Type_of_Complaint__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hotel</fullName>
            </value>
            <value>
                <fullName>Taxi</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>