GearsetPOC/force-app/main/default/objects/Complaint__c/fields/Onboard__c.field-meta.xml
<CustomField>
    <fullName>Onboard__c</fullName>
    <label>Onboard</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Staff_Complaint__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bar Buffet Staff</fullName>
            </value>
            <value>
                <fullName>Momentum Staff</fullName>
            </value>
            <value>
                <fullName>Train Manager</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>