GearsetPOC/force-app/main/default/objects/Complaint__c/fields/Onboard_Complaint__c.field-meta.xml
<CustomField>
    <fullName>Onboard_Complaint__c</fullName>
    <label>Onboard Feedback</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type_of_Complaint__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Air Conditioning</fullName>
            </value>
            <value>
                <fullName>Alcohol Policy (General)</fullName>
            </value>
            <value>
                <fullName>Alcohol Policy (Ski Train)</fullName>
            </value>
            <value>
                <fullName>Bar Buffet</fullName>
            </value>
            <value>
                <fullName>Benugo on Board</fullName>
            </value>
            <value>
                <fullName>Business Premier Experience</fullName>
            </value>
            <value>
                <fullName>Cleanliness</fullName>
            </value>
            <value>
                <fullName>Communications or Announcements</fullName>
            </value>
            <value>
                <fullName>Cracked Window</fullName>
            </value>
            <value>
                <fullName>Damaged Property</fullName>
            </value>
            <value>
                <fullName>Lighting</fullName>
            </value>
            <value>
                <fullName>Luggage Space</fullName>
            </value>
            <value>
                <fullName>Motion Sickness</fullName>
            </value>
            <value>
                <fullName>Noise</fullName>
            </value>
            <value>
                <fullName>Other Passengers</fullName>
            </value>
            <value>
                <fullName>Personal Injury</fullName>
            </value>
            <value>
                <fullName>Seating</fullName>
            </value>
            <value>
                <fullName>Standard Premier Experience</fullName>
            </value>
            <value>
                <fullName>Toilets</fullName>
            </value>
            <value>
                <fullName>Wi-Fi</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>