GearsetPOC/force-app/main/default/objects/Complaint__c/fields/Reason_Code_1_Alternative__c.field-meta.xml
<CustomField>
    <fullName>Reason_Code_1_Alternative__c</fullName>
    <formula>Text( Type_of_Complaint__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reason Code 1</label>
    <type>Text</type>
</CustomField>