GearsetPOC/force-app/main/default/objects/Complaint__c/fields/Reason_Code_2_Alternative__c.field-meta.xml
<CustomField>
    <fullName>Reason_Code_2_Alternative__c</fullName>
    <formula>IF( NOT(ISBLANK(Text(Staff_Complaint__c))),Text(Staff_Complaint__c),
IF( NOT(ISBLANK(Text(Where_Was_The_Food_From__c ))),Text(Where_Was_The_Food_From__c),
IF( NOT(ISBLANK(Text(Which_Policy__c ))),Text(Which_Policy__c),
IF( NOT(ISBLANK(Text(Where_Is_The_Safety_Concern__c  ))),Text(Where_Is_The_Safety_Concern__c ),
IF( NOT(ISBLANK(Text( Onboard_Complaint__c  ))),Text(Onboard_Complaint__c ),
IF( NOT(ISBLANK(Text( Which_Station__c  ))),Text(  Which_Station__c  ), 
IF( NOT(ISBLANK(Text(  Disruption_Feedback__c))),Text ( Disruption_Feedback__c),
Text(   Website_Feedback__c )
)))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reason Code 2</label>
    <type>Text</type>
</CustomField>