GearsetPOC/force-app/main/default/objects/Complaint__c/fields/Reason_Code_3_Alternative__c.field-meta.xml
<CustomField>
    <fullName>Reason_Code_3_Alternative__c</fullName>
    <formula>IF(NOT(ISBLANK(Text( Station__c ))),Text(Station__c ),
IF(NOT(ISBLANK(Text(  Onboard__c  ))),Text(Onboard__c ),
IF(NOT(ISBLANK(Text(   ECC_Webhelp__c ))),Text( ECC_Webhelp__c ),
IF(NOT(ISBLANK(Text(   What_Is_The_Complaint_Regarding__c ))),Text( What_Is_The_Complaint_Regarding__c ),
Text( Station_Complaint__c )
))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reason Code 3</label>
    <type>Text</type>
</CustomField>