GearsetPOC/force-app/main/default/objects/Complaint__c/fields/Staff_Complaint__c.field-meta.xml
<CustomField>
    <fullName>Staff_Complaint__c</fullName>
    <label>Where Is The Staff Member Located?</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type_of_Complaint__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Station</fullName>
            </value>
            <value>
                <fullName>Onboard</fullName>
            </value>
            <value>
                <fullName>ECC / Webhelp</fullName>
            </value>
            <value>
                <fullName>Times House</fullName>
            </value>
            <value>
                <fullName>Security Staff</fullName>
            </value>
            <value>
                <fullName>Special Assistance</fullName>
            </value>
            <value>
                <fullName>EuroDespatch</fullName>
            </value>
            <value>
                <fullName>Geoparts</fullName>
            </value>
            <value>
                <fullName>Ashford Contact Centre</fullName>
            </value>
            <value>
                <fullName>Brussels Contact centre</fullName>
            </value>
            <value>
                <fullName>Live Chat</fullName>
                <isActive>false</isActive>
                <label>Live Chat</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>