GearsetPOC/force-app/main/default/objects/Complaint__c/fields/Station_Complaint__c.field-meta.xml
<CustomField>
    <fullName>Station_Complaint__c</fullName>
    <label>Station Feedback</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Which_Station__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Bike price increase</fullName>
            </value>
            <value>
                <fullName>Bikes</fullName>
            </value>
            <value>
                <fullName>BP Lounge</fullName>
            </value>
            <value>
                <fullName>Check In</fullName>
            </value>
            <value>
                <fullName>Communication</fullName>
            </value>
            <value>
                <fullName>Congestion</fullName>
            </value>
            <value>
                <fullName>Damaged Items</fullName>
            </value>
            <value>
                <fullName>Departure Lounge</fullName>
            </value>
            <value>
                <fullName>EuroDespatch</fullName>
            </value>
            <value>
                <fullName>Geoparts</fullName>
            </value>
            <value>
                <fullName>Itiremia</fullName>
            </value>
            <value>
                <fullName>Lost Property</fullName>
            </value>
            <value>
                <fullName>No Stop</fullName>
            </value>
            <value>
                <fullName>Passport Checks</fullName>
            </value>
            <value>
                <fullName>Security Checks</fullName>
            </value>
            <value>
                <fullName>Security staff</fullName>
            </value>
            <value>
                <fullName>Signage</fullName>
            </value>
            <value>
                <fullName>Special Assistance</fullName>
            </value>
            <value>
                <fullName>Ticket Desk</fullName>
            </value>
            <value>
                <fullName>Toilets</fullName>
            </value>
            <value>
                <fullName>Zone 6</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>