GearsetPOC/force-app/main/default/objects/Complaint__c/fields/TCN__c.field-meta.xml
<CustomField>
    <fullName>TCN__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Any TCN from the booking in question</inlineHelpText>
    <label>TCN</label>
    <referenceTo>Ticket__c</referenceTo>
    <relationshipName>Complaints</relationshipName>
    <type>Lookup</type>
</CustomField>