GearsetPOC/force-app/main/default/objects/Complaint__c/fields/Type_of__c.field-meta.xml
<CustomField>
    <fullName>Type_of__c</fullName>
    <label>Type of Cost</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Cost_Attached_to_Feedback__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Monetary</fullName>
            </value>
            <value>
                <fullName>Voucher</fullName>
            </value>
            <value>
                <fullName>Points</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>