GearsetPOC/force-app/main/default/objects/Complaint__c/fields/Type_of_Complaint__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Complaint__c</fullName>
    <label>What Is The Feedback About?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Staff</fullName>
            </value>
            <value>
                <fullName>Food</fullName>
            </value>
            <value>
                <fullName>Policy</fullName>
            </value>
            <value>
                <fullName>Safety</fullName>
            </value>
            <value>
                <fullName>Onboard</fullName>
            </value>
            <value>
                <fullName>Stations</fullName>
            </value>
            <value>
                <fullName>Website</fullName>
            </value>
            <value>
                <fullName>Hotels</fullName>
            </value>
            <value>
                <fullName>Inntel</fullName>
            </value>
            <value>
                <fullName>Disruption</fullName>
            </value>
            <value>
                <fullName>Strikes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>