GearsetPOC/force-app/main/default/objects/Complaint__c/fields/Type_of_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Feedback__c</fullName>
    <label>Type of Feedback</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Praise</fullName>
            </value>
            <value>
                <fullName>Neutral</fullName>
            </value>
            <value>
                <fullName>Complaint</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>