GearsetPOC/force-app/main/default/objects/Complaint__c/fields/Website_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Website_Feedback__c</fullName>
    <label>Website Feedback</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type_of_Complaint__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pricing Mismatch</fullName>
            </value>
            <value>
                <fullName>Outage</fullName>
            </value>
            <value>
                <fullName>Communication</fullName>
            </value>
            <value>
                <fullName>Ongoing Error</fullName>
            </value>
            <value>
                <fullName>E-Voucher Not Received</fullName>
            </value>
            <value>
                <fullName>Manage Booking Error</fullName>
            </value>
            <value>
                <fullName>Manage Booking Not Available</fullName>
            </value>
            <value>
                <fullName>Loyalty</fullName>
            </value>
            <value>
                <fullName>Eurostar App</fullName>
            </value>
            <value>
                <fullName>Incorrect information</fullName>
            </value>
            <value>
                <fullName>Unaccompanied minor</fullName>
            </value>
            <value>
                <fullName>Changing destinations</fullName>
            </value>
            <value>
                <fullName>Cannot book</fullName>
            </value>
            <value>
                <fullName>Payment issue</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>