GearsetPOC/force-app/main/default/objects/Complaint__c/fields/What_Is_The_Complaint_Regarding__c.field-meta.xml
<CustomField>
    <fullName>What_Is_The_Complaint_Regarding__c</fullName>
    <label>What Is The Feedback Regarding?</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Where_Was_The_Food_From__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Quantity</fullName>
            </value>
            <value>
                <fullName>Quality</fullName>
            </value>
            <value>
                <fullName>Selection</fullName>
            </value>
            <value>
                <fullName>No Meal Served</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>