GearsetPOC/force-app/main/default/objects/Complaint__c/fields/Where_Is_The_Safety_Concern__c.field-meta.xml
<CustomField>
    <fullName>Where_Is_The_Safety_Concern__c</fullName>
    <label>Where Is The Safety Concern?</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type_of_Complaint__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>St Pancras</fullName>
            </value>
            <value>
                <fullName>Ebbsfleet International</fullName>
            </value>
            <value>
                <fullName>Ashford International</fullName>
            </value>
            <value>
                <fullName>Paris Gare Du Nord</fullName>
            </value>
            <value>
                <fullName>Calais Frethun</fullName>
            </value>
            <value>
                <fullName>Lille Europe</fullName>
            </value>
            <value>
                <fullName>Brussels Midi</fullName>
            </value>
            <value>
                <fullName>Marne-la-Vallée</fullName>
            </value>
            <value>
                <fullName>Aime La Plagne</fullName>
            </value>
            <value>
                <fullName>Moutier</fullName>
            </value>
            <value>
                <fullName>Bourg St Maurice</fullName>
            </value>
            <value>
                <fullName>Avignon</fullName>
            </value>
            <value>
                <fullName>Marseille</fullName>
            </value>
            <value>
                <fullName>Lyon</fullName>
            </value>
            <value>
                <fullName>Amsterdam</fullName>
            </value>
            <value>
                <fullName>Rotterdam</fullName>
            </value>
            <value>
                <fullName>Onboard</fullName>
            </value>
            <value>
                <fullName>Social Distancing (Stations)</fullName>
            </value>
            <value>
                <fullName>Social Distancing (Onboard)</fullName>
            </value>
            <value>
                <fullName>Ski Stations</fullName>
                <isActive>false</isActive>
                <label>Ski Stations</label>
            </value>
            <value>
                <fullName>South of France Stations</fullName>
                <isActive>false</isActive>
                <label>South of France Stations</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>