GearsetPOC/force-app/main/default/objects/Complaint__c/fields/Which_Policy__c.field-meta.xml
<CustomField>
    <fullName>Which_Policy__c</fullName>
    <label>Which Policy?</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type_of_Complaint__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Adding points after 90 days</fullName>
            </value>
            <value>
                <fullName>Aftersales</fullName>
            </value>
            <value>
                <fullName>Animals / Pets</fullName>
            </value>
            <value>
                <fullName>Bike Price Increase</fullName>
            </value>
            <value>
                <fullName>Book by 30th September for travel into Spring 2021</fullName>
            </value>
            <value>
                <fullName>Book by March 2021 for Travel into Autumn 2021</fullName>
            </value>
            <value>
                <fullName>Booking</fullName>
            </value>
            <value>
                <fullName>Carte Blanche</fullName>
            </value>
            <value>
                <fullName>Change of Timetable</fullName>
            </value>
            <value>
                <fullName>Compensation</fullName>
            </value>
            <value>
                <fullName>Connection times</fullName>
            </value>
            <value>
                <fullName>Death or illness</fullName>
            </value>
            <value>
                <fullName>Evoucher extension</fullName>
            </value>
            <value>
                <fullName>Expenses</fullName>
            </value>
            <value>
                <fullName>Last-Minute</fullName>
            </value>
            <value>
                <fullName>Luggage</fullName>
            </value>
            <value>
                <fullName>Missed Departure</fullName>
            </value>
            <value>
                <fullName>Name Exchange</fullName>
            </value>
            <value>
                <fullName>NCO</fullName>
            </value>
            <value>
                <fullName>New Club Eurostar programme</fullName>
            </value>
            <value>
                <fullName>Paris Riots</fullName>
            </value>
            <value>
                <fullName>Points expiry</fullName>
            </value>
            <value>
                <fullName>Refund time scale</fullName>
            </value>
            <value>
                <fullName>Set Swap</fullName>
            </value>
            <value>
                <fullName>SNCB or NS</fullName>
            </value>
            <value>
                <fullName>Special Assistance</fullName>
            </value>
            <value>
                <fullName>Survey</fullName>
            </value>
            <value>
                <fullName>Unaccompanied minor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>