GearsetPOC/force-app/main/default/objects/Complaint__c/validationRules/Attach_cost_to_Feedback.validationRule-meta.xml
<ValidationRule>
    <fullName>Attach_cost_to_Feedback</fullName>
    <active>true</active>
    <description>Rule triggers if feedback has a cost attached but the cost fields are blank</description>
    <errorConditionFormula>(ISPICKVAL(Cost_Attached_to_Feedback__c,&quot;Yes&quot;)
&amp;&amp;
NOT(ISPICKVAL( Type_of__c ,&quot;Points&quot;)))
&amp;&amp;
(ISBLANK( Text(Currency__c ))
||
( ISNULL(Feedback_Cost__c))
||
( ISNULL( Text( Type_of__c  ))))</errorConditionFormula>
    <errorMessage>Please enter the full cost details to the relevant fields (Currency &amp; Value)</errorMessage>
</ValidationRule>